fix role configuration