@@ -3,6 +3,7 @@ package com.example.ResearchHub.security;
 import com.example.ResearchHub.Entities.User;
 import com.example.ResearchHub.Repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -10,6 +11,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -23,7 +25,10 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         User user = userRepository.findByEmail(email).orElseThrow(()-> new UsernameNotFoundException("email not found"));
-        return  new org.springframework.security.core.userdetails.User(user.getEmail(),user.getPassword(), Collections.emptyList());
+
+        String roleName = "ROLE_" + user.getRole().name();
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(roleName));
+        return  new org.springframework.security.core.userdetails.User(user.getEmail(),user.getPassword(), authorities);
     }
 
 }
